<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Binder</string>
    <string name="facebook_app_id" translatable="false">fbId</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb(fbID)</string>
    <string name="facebook_client_token" translatable="false">facebook_client_token</string>
    <string name="google_web_client_id" translatable="false">web_client_id_from_google_api_console</string>
    <string name="admob_appid" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="my_Interstitial_Add" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="my_Rewarded_Add" translatable="false">ca-app-pub-3940256099942544/5224354917</string>
    <string name="google_map_key" translatable="false">your_google_api_key</string>
    <string name="places_search_api" translatable="false">your_google_places_search_api_key</string>
    <string name="device" translatable="false">android</string>
    <string name="english" translatable="false">English</string>
    <string name="chat">Chat</string>
    <string name="send_message_here">Send Message Here...</string>
    <string name="enable_location">Enable location</string>
    <string name="you_ll_need_to_enable_your_location_n_in_order_to_use_binder">You\'ll need to enable your location\n in order to use Binder</string>
    <string name="allow_location">Allow Location</string>
    <string name="first_name">First Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="next">Next</string>
    <string name="login_description_1">Discover new and interesting\n people nearby</string>
    <string name="login_description_2">Swipe right to like someone\n or swipe left to pass</string>
    <string name="login_description_3">If they also swipe right then it\'s a match!</string>
    <string name="continue_with_facebook">Continue with facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_phone">Continue with Phone / email </string>
    <string name="we_don_t_post_anything_to_facebook">We don\'t Post anything to Facebook.</string>
    <string name="phone_number">Phone Number</string>
    <string name="location">Location</string>
    <string name="save_location">Save Location</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="about_profile_name">About</string>
    <string name="about">About You</string>
    <string name="job_title">Job Title</string>
    <string name="company">Company</string>
    <string name="gender">Gender</string>
    <string name="new_matches">New Matches</string>
    <string name="no_other_match_found_yet">No other Match Found yet.</string>
    <string name="message">Message</string>
    <string name="it_s_match">it\'s Match!</string>
    <string name="you_and_alison_likes_each_other">you and alison likes each other</string>
    <string name="send_a_message">Send a Message</string>
    <string name="settings">Settings</string>
    <string name="swiping_in">Swiping in</string>
    <string name="my_current_location">My Current Location</string>
    <string name="add_new_location">Add New Location</string>
    <string name="show_me">Show me</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="maximum_distance">Maximum Distance</string>
    <string name="mile">mile</string>
    <string name="miles">miles</string>
    <string name="age_range">Age Range</string>
    <string name="year">Year</string>
    <string name="years">Years</string>
    <string name="show_me_on_binder">Show me On Binder</string>
    <string name="don_t_show_my_age">Don\'t show my Age</string>
    <string name="make_my_distance_invisible">Make my Distance Invisible</string>
    <string name="legal">Legal</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="username">Username</string>
    <string name="your_message">Your Message</string>
    <string name="report">Report</string>
    <string name="are_you_sure">Are you Sure?</string>
    <string name="delete_account_description">Delete an Account will Erase all of your data Completely</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_report_user">Are you sure to Report this user?</string>
    <string name="delete_this_message">Delete this message</string>
    <string name="unmatch_this_user">Unmatch this User</string>
    <string name="unblock_this_user">Unblock this User</string>
    <string name="block_this_user">Block and Report</string>
    <string name="block">Block</string>
    <string name="unblock">UnBlock</string>
    <string name="are_you_sure_block_user">Are you sure to block this user?</string>
    <string name="calling">Calling...</string>
    <string name="reconnecting_to">Reconnecting to</string>
    <string name="you_need_to_enable_gps_location_to_connect_nearby_user">You need to enable GPS location to connect nearby user</string>
    <string name="enable">Enable</string>
    <string name="GPS_location_status_">GPS Location Status?</string>
    <string name="reconnecting">Reconnecting</string>
    <string name="connected_to">Connected to</string>
    <string name="connected">Connected</string>
    <string name="failed_to_connect">Failed to connect</string>
    <string name="disconnected">Disconnected</string>
    <string name="disconnected_from">Disconnected from</string>
    <string name="audio_connected">Audio Connected</string>
    <string name="audio_unpublished">Audio Unpublished</string>
    <string name="video_connected">Video Connected</string>
    <string name="video_unpublished">Video Unpublished</string>
    <string name="audio_subscribed">Audio Subscribed</string>
    <string name="audio_unsubscribed">Audio Unsubscribed</string>
    <string name="audio_subscription_failed">Audio Subscription Failed</string>
    <string name="video_subscribed">Video Subscribed</string>
    <string name="video_unsubscribed">Video Unsubscribed</string>
    <string name="video_subscription_failed">Video Subscription Failed</string>
    <string name="joined">" joined"</string>
    <string name="ringing">Ringing...</string>
    <string name="alert">Alert</string>
    <string name="voice_reah_limit">You have reached out of your Voice Call limit.</string>
    <string name="video_reach_limit">You have reached out of your Video Call limit.</string>
    <string name="done">Done</string>
    <string name="no_internet">No Internet. Connect to wifi or cellular network.</string>
    <string name="discovery_settings">Discovery Settings</string>
    <string name="language">Language</string>
    <string name="login">Log In</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="please_grant_permission">Please Grant permission</string>
    <string name="resend_code">Resend code </string>
    <string name="code_is_invalid">Code is Invalid</string>
    <string name="your_code_was_emailed_to">Your code was emailed to </string>
    <string name="login_cancel">Login Cancel</string>
    <string name="please_enter_valid_new_password">Please enter valid new password</string>
    <string name="please_enter_valid_password">Please enter valid password</string>
    <string name="login_error">Login Error</string>
    <string name="error">Error</string>
    <string name="create_password">Create password</string>
    <string name="use_characters_from_at_least_">Use 8-20 characters from at least 2 categories: letters, numbers, special characters</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="we_ll_email_you_a_code">We\'ll email you a code to reset your password.</string>
    <string name="email_address">Email address</string>
    <string name="reset">Reset</string>
    <string name="enter_4_digit_code">Enter 4\ndigit Code</string>
    <string name="invalid_phone_number">Invalid Phone Number</string>
    <string name="select_country">Select Country</string>
    <string name="your_code_was_sent_to">Your code was sent to</string>
    <string name="please_Wait">Please Wait</string>
    <string name="recording">Recording...</string>
    <string name="hold_Mic_Button_to_Record">Hold Mic Button to Record</string>
    <string name="stop_Recording">Stop Recording...</string>
    <string name="for_demo_purpose">For demo purpose we only allow to </string>
    <string name="choose_from_Gallery">Choose from Gallery</string>
    <string name="tap_again">Tap again</string>
    <string name="camera_permission_denied">Camera permission denied</string>
    <string name="are_you_sure_to_delete_this_picture">Are you sure to delete this picture ?</string>
    <string name="show_on_Card_text">while turned off,you will not be shown in the card stack. People you have already liked may still see your profile and match with you. You can still see and chat with your matches.</string>
    <string name="ager_preference_txt">Binder uses these preference to suggest matches. some match suggestion may not fall within your desired paramenters.</string>
    <string name="terms_of_services">Terms of Services</string>
    <string name="licenses">Licenses</string>
    <string name="version">Version</string>
    <string name="help_support"><![CDATA[Help & support]]></string>
    <string name="miles_away"> miles away</string>
    <string name="km_away"> Km away</string>
    <string name="GETBINDERPLUS">GET BINDER PLUS</string>
    <string name="welcome_to">Welcome to</string>
    <string name="please_follow_these_house_rules">Please follow these House Rules.</string>
    <string name="be_yourself">Be yourself.</string>
    <string name="stay_safe">Stay safe.</string>
    <string name="play_it_cool">Play it cool.</string>
    <string name="be_proactive">Be proactive.</string>
    <string name="always_report_bad_behavior">Always report bad behavior</string>
    <string name="respect_others_and_treat_them_as_you_would_like_to_be_treated">Respect others and treat them as you would like to be treated.</string>
    <string name="make_sure_your_photos_age_and_bio_are_true_to_who_you_are">Make sure your photos, age, and bio are true to who you are.</string>
    <string name="dont_be_too_quick_to_give_out_personal_information_data_safely">Don\'t be too quick to give out personal information. Date Safely</string>
    <string name="i_agree">I agree</string>
    <string name="copy_this_pose_amp_take_a_photo"><![CDATA[Copy this pose & take a photo]]></string>
    <string name="we_ll_verify_you">we\'ll verify you by comparing it to the other photos already on your Binder profile</string>
    <string name="take_my_photo">Take My Photo</string>
    <string name="why_is_this_needed">Why is this needed?</string>
    <string name="getting_photo_verified">Getting photo verified</string>
    <string name="got_it">Got it</string>
    <string name="verifiedDescription" translatable="false">Comparing your photo to your profile is how we check you\'re a real person.It keeps Binder safe and honest.\nVerification is optional and we\'ll only use your photo to confirm you\'re you.It won\'t go on your profile, so doesn\'t have to be your best.</string>
    <string name="submit_description">• Binder will scan your photo to verify your identity, which may include the use of facial recognition technology\n • We\'ll keep your photo and scans to verify your photos in the future\n
Contact us via our Help Centre to withdraw your consent </string>
    <string name="review_and_save_your_photo">Review and save your photo</string>
</resources>