<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/d_round_white_bkg"
    tools:context=".ActivitiesFragments.Profile.VerifyMessageBottomSheet">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_15sdp">

        <ImageView
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:src="@drawable/ic_verify"
            android:layout_marginTop="@dimen/_15sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getting_photo_verified"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_15sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verifiedDescription"
            android:layout_marginTop="@dimen/_15sdp"
            android:textColor="@color/black"
            android:lineSpacingExtra="8dp"
            android:textSize="@dimen/_15sdp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:id="@+id/takePhotoBtn"
            android:text="@string/take_my_photo"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/ic_pink_background"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/gotitBtn"
            android:text="@string/got_it"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_10sdp" />

    </LinearLayout>

</FrameLayout>