<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <ImageView
                android:id="@+id/ivClose"
                android:layout_width="@dimen/_36sdp"
                android:layout_height="@dimen/_36sdp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_cross_black" />

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/tabTitle"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                android:padding="@dimen/_4sdp"
                android:src="@mipmap/ic_launcher_round" />

            <TextView
                android:layout_marginTop="@dimen/_2sdp"
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to"
                android:textStyle="bold"
                android:textSize="@dimen/_17sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/please_follow_these_house_rules"
                android:textColor="@color/newGrayTextColor"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>


        <LinearLayout
            android:paddingHorizontal="@dimen/_22sdp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tabTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginTop="@dimen/_22sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="start|center_vertical">

                    <ImageView
                        android:layout_width="@dimen/_17sdp"
                        android:layout_height="@dimen/_17sdp"
                        android:src="@drawable/ic_check" />

                    <TextView
                        android:layout_marginStart="@dimen/_6sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/be_yourself"
                        android:textStyle="bold"
                        android:textSize="@dimen/_15sdp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/make_sure_your_photos_age_and_bio_are_true_to_who_you_are"
                    android:textColor="@color/newGrayTextColor"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="start|center_vertical">

                    <ImageView
                        android:layout_width="@dimen/_17sdp"
                        android:layout_height="@dimen/_17sdp"
                        android:src="@drawable/ic_check" />

                    <TextView
                        android:layout_marginStart="@dimen/_6sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stay_safe"
                        android:textStyle="bold"
                        android:textSize="@dimen/_15sdp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tvDataSafely"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/dont_be_too_quick_to_give_out_personal_information_data_safely"
                    android:textColor="@color/newGrayTextColor"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="start|center_vertical">

                    <ImageView
                        android:layout_width="@dimen/_17sdp"
                        android:layout_height="@dimen/_17sdp"
                        android:src="@drawable/ic_check" />

                    <TextView
                        android:layout_marginStart="@dimen/_6sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/play_it_cool"
                        android:textStyle="bold"
                        android:textSize="@dimen/_15sdp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/respect_others_and_treat_them_as_you_would_like_to_be_treated"
                    android:textColor="@color/newGrayTextColor"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="start|center_vertical">

                    <ImageView
                        android:layout_width="@dimen/_17sdp"
                        android:layout_height="@dimen/_17sdp"
                        android:src="@drawable/ic_check" />

                    <TextView
                        android:layout_marginStart="@dimen/_6sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/be_proactive"
                        android:textStyle="bold"
                        android:textSize="@dimen/_15sdp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/always_report_bad_behavior"
                    android:textColor="@color/newGrayTextColor"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

        </LinearLayout>





        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/_22sdp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true">

            <RelativeLayout
                android:id="@+id/tabAgree"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/ic_pink_background"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/tvAgree"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/i_agree"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>