<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activitiesandfragments.activities.EnableLocationA">

        <RelativeLayout
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:background="@color/app_color">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/location"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />


        </RelativeLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:background="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/enable_location_txt">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="30dp"
                        android:src="@drawable/ic_location_gray" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/enable_location_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/enable_location"
                    android:textColor="@color/black"
                    android:textSize="35dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/enable_location_txt"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:lineSpacingExtra="6dp"
                        android:paddingTop="10dp"
                        android:text="@string/you_ll_need_to_enable_your_location_n_in_order_to_use_binder"
                        android:textColor="@color/gray"
                        android:textSize="15dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <LinearLayout
                            android:id="@+id/tabLocation"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_38sdp"
                            android:orientation="vertical"
                            android:elevation="@dimen/_2sdp"
                            android:layout_marginTop="@dimen/_12sdp"
                            android:layout_marginBottom="@dimen/_12sdp"
                            android:background="@drawable/enable_background"
                            android:gravity="center">

                            <TextView
                                android:id="@+id/tvLocation"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:text="@string/allow_location"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_11sdp" />


                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>


            </RelativeLayout>
        </FrameLayout>


    </RelativeLayout>
</layout>